fixed spacing for small pictures

--- a/index.css
+++ b/index.css
@@ -1,3 +1,42 @@
-h1 {
-    color: red;
+body {
+    font-family: "Arial", Helvetica, sans-serif;
+    background-color: #f2f2f2; 
+}
+
+.flex-container {
+    display: flex;
+    width: 1125px;
+    height: 3000px;
+    margin-top: 30px;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    overflow-x: hidden;
+}
+
+#topPicture {
+    height: 600px;
+    width: 100%;
+}
+
+#pic-list {
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    justify-content: space-evenly;
+}
+
+#pic-list .small-pic {
+    width: 30%;
+}
+
+#pic-list .small-pic img {
+    max-width: 100%;
+    height: 250px;
+}
+
+code {
+    background: #f2f2f2;
 }
